@@ -992,7 +992,7 @@ $(function() {
                 '</td>',
                 '<td><input data="EmailAddress" id="emailaddress" type="text" class="asm-doubletextbox" /></td>',
                 '</tr>',
-                '</tr>',
+                '<tr>',
                 '<td><label for="emailsig">' + _("Email signature") + '</label>',
                 '<span id="callout-emailsignature" class="asm-callout">' + _("This text will be added to the bottom of all send email dialogs") + '</span>',
                 '</td>',
@@ -1040,6 +1040,13 @@ $(function() {
                 '<tr>',
                 '<td><label for="smtppass">' + _("Password") + '</label></td>',
                 '<td><input id="smtppass" data="SMTPPassword" class="asm-textbox" type="text" /></td>',
+                '</tr>',
+                '<tr>',
+                '<td></td>',
+                '<td><input id="smtpreplyasfrom" type="checkbox" class="asm-checkbox" data="SMTPReplyAsFrom" /> ',
+                '<label for="smtpreplyasfrom">' + _("Set the FROM header from the email dialog") + '</label>',
+                '<span class="asm-callout">' + _("Allow the user to override the From header. Emails will fail if you try to send email from a domain you do not own.") + '</span>',
+                '</td>',
                 '</tr>',
                 '</table>',
                 '</div>',
